--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
+    "@mui/x-data-grid": "^7.15.0",
     "@react-spring/web": "^9.7.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,9 +22,11 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-flip-toolkit": "^7.2.4",
     "react-icons": "^5.3.0",
+    "react-is": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -51,6 +57,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^1.8.29",
+    "recharts": "^2.12.7"
   }
 }
